# rfeatures

./: .gitignore  CMakeLists.txt  README.md
SLICSuperpixelsAndSupervoxelsCode/include/: SLIC.h
SLICSuperpixelsAndSupervoxelsCode/src/: SLIC.cpp
cmake/: rFeaturesConfig (MSI's conflicted copy 2017-11-21).cmake  rFeaturesConfig.cmake
deprecated/: HOG.cpp  HOG.h  ImageModifier.cpp  ImageModifier.h  PatchFeatureExtractor_OLD.cpp  RangeBuilder.cpp  RangeBuilder.h  RangeGradientsBuilder.cpp  RangeGradientsBuilder.h  ViewBuilder.cpp  ViewBuilder.h  ViewFileReader_OLD.h  ViewReceiver.cpp  ViewReceiver.h
include/: .ObjModelCleaner.h.swp  .ObjModelReflector.h.swp  .ObjModelRegionSelector.h.swp  .ObjModelWeights.h.swp  AAMReader.h  AdaptiveDepthMinFilter.h  AdaptiveDepthPatchScanner.h  AdaptiveDepthSegmenter.h  AdaptiveDepthStructureFilter.h  BatchFeatureExtractor.h  CameraParams.h  CannyOperator.h  CircleDiff.h  CircleDiffExtractor.h  ColourDetector.h  ConnectedComponents.h  ContentFinder.h  DataLoader.h  DataTools.h  DepthDiff.h  DepthDiffExtractor.h  DepthFinder.h  DepthSegmenter.h  DescriptorJoiner.h  DescriptorStatistics.h  DijkstraShortestPathFinder.h  DistanceMeasurer.h  DistanceTransform.h  EDTFeature.h  EDTFeatureExtractor.h  Equi2Rect.h  FastHOG.h  FastHOGExtractor.h  FastKeypoints.h  FeatureExceptions.h  FeatureExtractor.h  FeatureLibrary.h  FeatureOperator.h  FeaturePreProcessor.h  FeatureUtils.h  (+159 more)
include/deprecated/: IntegralImage.h  IntegralImage_template.h
include/template/: DistanceTransform_template.h  FeatureUtils_template.h  GradientsBuilder_template.h  NFoldCalculator_template.h  NOctree_template.h  VectorFloatKeyHashing_template.h  View_template.h
libICP/matlab/: icpMex.cpp  sparsifyMex.cpp
libICP/src/: demo.cpp  icp.cpp  icp.h  icpPointToPlane.cpp  icpPointToPlane.h  icpPointToPoint.cpp  icpPointToPoint.h  kdtree.cpp  kdtree.h  matrix.cpp  matrix.h
src/: .ObjModel.cpp.swp  AAMReader.cpp  AdaptiveDepthMinFilter.cpp  AdaptiveDepthPatchScanner.cpp  AdaptiveDepthSegmenter.cpp  AdaptiveDepthStructureFilter.cpp  BatchFeatureExtractor.cpp  CameraParams.cpp  CannyOperator.cpp  CircleDiff.cpp  CircleDiffExtractor.cpp  ColourDetector.cpp  ConnectedComponents.cpp  ContentFinder.cpp  DataLoader.cpp  DataTools.cpp  DepthDiff.cpp  DepthDiffExtractor.cpp  DepthFinder.cpp  DepthSegmenter.cpp  DescriptorJoiner.cpp  DescriptorStatistics.cpp  DijkstraShortestPathFinder.cpp  DistanceMeasurer.cpp  DistanceTransform.cpp  EDTFeature.cpp  EDTFeatureExtractor.cpp  Equi2Rect.cpp  FastHOG.cpp  FastHOGExtractor.cpp  FastKeypoints.cpp  FeatureExceptions.cpp  FeatureExtractor.cpp  FeatureLibrary.cpp  FeatureOperator.cpp  FeaturePreProcessor.cpp  FeatureUtils.cpp  Fish2Rect.cpp  GallLempitskyFeature.cpp  GallLempitskyFeatureExtractor.cpp  (+153 more)
src/deprecated/: ObjModelTools.cpp
test/NOctree/: main.cpp
testing/AdaptiveDepthMinFilter/: CMakeLists.txt
testing/AdaptiveDepthMinFilter/src/: main.cpp
testing/AdaptiveDepthSegmenter/: main.cpp
testing/AdaptiveDepthStructureFilter/: CMakeLists.txt  main.cpp
testing/Canny/: Makefile  canny
testing/Canny/src/: canny.cpp
testing/CircleFeature/: CMakeLists.txt
testing/CircleFeature/src/: main.cpp
testing/ColourDetector/: Makefile  test_ColourDetector
testing/ColourDetector/src/: test_ColourDetector.cpp
testing/DistanceTransform/: CMakeLists.txt
testing/DistanceTransform/src/: main.cpp
testing/FastHOG/: CMakeLists.txt
testing/FastHOG/src/: main.cpp
testing/FastHOGExtractor/: CMakeLists.txt
testing/FastHOGExtractor/src/: main.cpp
testing/FastKeypoints/: CMakeLists.txt
testing/FastKeypoints/src/: main.cpp
testing/Fish2Rect/: CMakeLists.txt  main.cpp
testing/GallLempitsky/: CMakeLists.txt
testing/GallLempitsky/src/: main.cpp
testing/GaussianFilter/: CMakeLists.txt
testing/GaussianFilter/src/: main.cpp
testing/GenerateFeatures_OLD/: CMakeLists.txt
testing/GenerateFeatures_OLD/src/: main.cpp
testing/GrabCuts/: Makefile  test
testing/GrabCuts/src/: test.cpp
testing/HOG/: CMakeLists.txt
testing/HOG/src/: test.cpp
testing/HOG_Operator/src/: test.cpp
testing/HarrisKeypoints/src/: main.cpp
testing/Histogram1D/: Makefile  test
testing/Histogram1D/src/: test.cpp
testing/HoughCircles/: Makefile  test
testing/HoughCircles/src/: test.cpp
testing/HoughLines/: test
testing/HoughLines/src/: test.cpp
testing/ImageLabeller/: main.cpp  test
testing/ImagePyramid/: CMakeLists (rich-imac's conflicted copy 2012-03-23).txt  CMakeLists.txt
testing/ImagePyramid/src/: test (rich-imac's conflicted copy 2012-03-23).cpp  test.cpp
testing/IntegralImage/: CMakeLists.txt  main.cpp
testing/Laplacian/: test
testing/Laplacian/src/: test.cpp
testing/MserKeypoints/: test
testing/MserKeypoints/src/: test.cpp
testing/Panorama/: CMakeLists.txt
testing/Panorama/src/: test.cpp
testing/PointCloud/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
testing/PointCloud/src/: test.cpp
testing/ProHOG/: CMakeLists.txt  testCircles.tiff  testSquare.tiff
testing/ProHOG/src/: test.cpp
testing/RegionSorter/: CMakeLists.txt
testing/RegionSorter/src/: test.cpp
testing/RegionSorter2/: CMakeLists.txt
testing/RegionSorter2/src/: test.cpp
testing/Scharr/: Makefile  test
testing/Scharr/src/: test.cpp
testing/SiftKeypoints/: Makefile  test
testing/SiftKeypoints/src/: test.cpp
testing/StarKeypoints/: test
testing/StarKeypoints/src/: test.cpp
testing/Superpixels/: CMakeLists.txt
testing/Superpixels/src/: main.cpp
testing/Superpixels_temp/: CMakeLists.txt
testing/Superpixels_temp/include/: SLIC.h  Superpixels.h
testing/Superpixels_temp/src/: SLIC.cpp  Superpixels.cpp  main.cpp
testing/SurfKeypoints/: test
testing/SurfKeypoints/src/: test.cpp
testing/VectorDistribution/src/: main.cpp
testing/Watershed/: test
testing/Watershed/src/: test.cpp
