cmake_minimum_required(VERSION 3.12.2 FATAL_ERROR)

project( rFeatures)

set(WITH_OPENCV TRUE)
set(WITH_RLIB TRUE)
set(WITH_LIBICP TRUE)
include( "cmake/FindLibs.cmake")

set( INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
set( SRC_DIR "${PROJECT_SOURCE_DIR}/src")
include_directories( ${INCLUDE_DIR})

set( INCLUDE_FILES
    #"${INCLUDE_DIR}/AdaptiveDepthMinFilter.h"
    "${INCLUDE_DIR}/AdaptiveDepthPatchScanner.h"
    "${INCLUDE_DIR}/AdaptiveDepthSegmenter.h"
    "${INCLUDE_DIR}/AdaptiveDepthStructureFilter.h"
    "${INCLUDE_DIR}/BatchFeatureExtractor.h"
    "${INCLUDE_DIR}/CameraParams.h"
    "${INCLUDE_DIR}/CannyOperator.h"
    "${INCLUDE_DIR}/CircleDiff.h"
    "${INCLUDE_DIR}/CircleDiffExtractor.h"
    "${INCLUDE_DIR}/ColourDetector.h"
    "${INCLUDE_DIR}/ConnectedComponents.h"
    "${INCLUDE_DIR}/ContentFinder.h"
    #"${INCLUDE_DIR}/DataLoader.h"
    #"${INCLUDE_DIR}/DataTools.h"
    "${INCLUDE_DIR}/DescriptorJoiner.h"
    "${INCLUDE_DIR}/DescriptorStatistics.h"
    "${INCLUDE_DIR}/DepthDiff.h"
    "${INCLUDE_DIR}/DepthDiffExtractor.h"
    "${INCLUDE_DIR}/DepthFinder.h"
    "${INCLUDE_DIR}/DepthSegmenter.h"
    "${INCLUDE_DIR}/DijkstraShortestPathFinder.h"
    "${INCLUDE_DIR}/DistanceTransform.h"
    "${INCLUDE_DIR}/template/DistanceTransform_template.h"
    "${INCLUDE_DIR}/EDTFeature.h"
    "${INCLUDE_DIR}/EDTFeatureExtractor.h"
    "${INCLUDE_DIR}/Equi2Rect.h"
    "${INCLUDE_DIR}/FastHOG.h"
    "${INCLUDE_DIR}/FastHOGExtractor.h"
    "${INCLUDE_DIR}/Fish2Rect.h"
    #"${INCLUDE_DIR}/FastKeypoints.h"
    "${INCLUDE_DIR}/FeatureExceptions.h"
    "${INCLUDE_DIR}/FeatureExtractor.h"
    "${INCLUDE_DIR}/FeatureLibrary.h"
    "${INCLUDE_DIR}/FeatureOperator.h"
    #"${INCLUDE_DIR}/FeaturePreProcessor.h"
    "${INCLUDE_DIR}/FeatureUtils.h"
    "${INCLUDE_DIR}/template/FeatureUtils_template.h"
    #"${INCLUDE_DIR}/GallLempitskyFeature.h"
    #"${INCLUDE_DIR}/GallLempitskyFeatureExtractor.h"
    "${INCLUDE_DIR}/GlobalPlaneSlicingPath.h"
    "${INCLUDE_DIR}/GrabCutsOperator.h"
    "${INCLUDE_DIR}/GradientsBuilder.h"
    "${INCLUDE_DIR}/GradientExtractor.h"
    "${INCLUDE_DIR}/template/GradientsBuilder_template.h"
    #"${INCLUDE_DIR}/GroundTruthRecords.h"
    "${INCLUDE_DIR}/HaarCascadeDetector.h"
    #"${INCLUDE_DIR}/HarrisKeypoints.h"
    #"${INCLUDE_DIR}/HeightDepthImager.h"
    "${INCLUDE_DIR}/Histogram.h"
    "${INCLUDE_DIR}/Histogram1D.h"
    "${INCLUDE_DIR}/HOGExtractor.h"
    "${INCLUDE_DIR}/HoughCirclesOperator.h"
    "${INCLUDE_DIR}/HoughLinesOperator.h"
    #"${INCLUDE_DIR}/ImageBuilder.h"
    #"${INCLUDE_DIR}/ImageComparator.h"
    "${INCLUDE_DIR}/ImageHistogram.h"
    "${INCLUDE_DIR}/ImageIO.h"
    "${INCLUDE_DIR}/ImageLabeller.h"
    #"${INCLUDE_DIR}/ImageModifier.h"  # Requires OpenCV nonfree library
    "${INCLUDE_DIR}/ImageProcess.h"
    "${INCLUDE_DIR}/ImagePyramid.h"
    "${INCLUDE_DIR}/ImageType.h"
    "${INCLUDE_DIR}/ImageTypeEnum.h"
    "${INCLUDE_DIR}/IntensityIndexer.h"
    #"${INCLUDE_DIR}/JpegDecompressor.h"
    "${INCLUDE_DIR}/KeypointsConverter.h"
    "${INCLUDE_DIR}/KeypointsDetector.h"
    "${INCLUDE_DIR}/LaplacianZC.h"
    "${INCLUDE_DIR}/LinesConverter.h"
    "${INCLUDE_DIR}/LinesFilter.h"
    "${INCLUDE_DIR}/LocalBinaryPattern.h"
    "${INCLUDE_DIR}/LocalBinaryPatternExtractor.h"
    "${INCLUDE_DIR}/LocalPlaneSlicingPath.h"
    #"${INCLUDE_DIR}/MserKeypoints.h"
    "${INCLUDE_DIR}/NFoldCalculator.h"
    "${INCLUDE_DIR}/template/NFoldCalculator_template.h"
    "${INCLUDE_DIR}/ObjModel.h"
    "${INCLUDE_DIR}/ObjModelAligner.h"
    "${INCLUDE_DIR}/ObjModelBounds.h"
    #"${INCLUDE_DIR}/ObjModelCleaner.h"
    "${INCLUDE_DIR}/ObjModelCopier.h"
    "${INCLUDE_DIR}/ObjModelCurvatureMap.h"
    "${INCLUDE_DIR}/ObjModelCurvatureMetrics.h"
    "${INCLUDE_DIR}/ObjModelEdgeFaceAdder.h"
    "${INCLUDE_DIR}/ObjModelFaceUnfoldingVertexSearcher.h"
    "${INCLUDE_DIR}/ObjModelFastMarcher.h"
    "${INCLUDE_DIR}/ObjModelFunctionMapper.h"
    #"${INCLUDE_DIR}/ObjModelGeodesicPathFinder.h"
    "${INCLUDE_DIR}/ObjModelHoleFiller.h"
    "${INCLUDE_DIR}/ObjModelInternal.h"
    #"${INCLUDE_DIR}/ObjModelIntegrityChecker.h"
    "${INCLUDE_DIR}/ObjModelKDTree.h"
    "${INCLUDE_DIR}/ObjModelKNNCorresponder.h"
    "${INCLUDE_DIR}/ObjModelManifolds.h"
    "${INCLUDE_DIR}/ObjModelManifoldBoundaries.h"
    "${INCLUDE_DIR}/ObjModelMeshTraversalRecorder.h"
    "${INCLUDE_DIR}/ObjModelNormals.h"
    "${INCLUDE_DIR}/ObjModelOrienter.h"
    "${INCLUDE_DIR}/ObjModelPatchBendingEnergy.h"
    "${INCLUDE_DIR}/ObjModelPolygonAngles.h"
    "${INCLUDE_DIR}/ObjModelPolygonAreas.h"
    #"${INCLUDE_DIR}/ObjModelPolygonCollapser.h"
    "${INCLUDE_DIR}/ObjModelPolyUnfolder.h"
    "${INCLUDE_DIR}/ObjModelRegionSelector.h"
    "${INCLUDE_DIR}/ObjModelReflector.h"
    "${INCLUDE_DIR}/ObjModelReferenceResampler.h"
    "${INCLUDE_DIR}/ObjModelRemesher.h"
    "${INCLUDE_DIR}/ObjModelSlicer.h"
    "${INCLUDE_DIR}/ObjModelSmoother.h"
    "${INCLUDE_DIR}/ObjModelSurfaceCurveFinder.h"
    "${INCLUDE_DIR}/ObjModelSurfacePatches.h"
    "${INCLUDE_DIR}/ObjModelSurfacePathFinder.h"
    "${INCLUDE_DIR}/ObjModelSurfaceGlobalPlanePathFinder.h"
    "${INCLUDE_DIR}/ObjModelSurfaceLocalPlanePathFinder.h"
    "${INCLUDE_DIR}/ObjModelSurfacePointFinder.h"
    "${INCLUDE_DIR}/ObjModelTetrahedronReplacer.h"
    "${INCLUDE_DIR}/ObjModelTools.h"
    #"${INCLUDE_DIR}/ObjModelTopologyFinder.h"
    "${INCLUDE_DIR}/ObjModelTriangleMeshParser.h"
    #"${INCLUDE_DIR}/ObjModelVertexAdder.h"
    "${INCLUDE_DIR}/ObjModelVertexCrossingTimeCalculator.h"
    "${INCLUDE_DIR}/ObjModelWeights.h"
    "${INCLUDE_DIR}/ObjPolyInterpolator.h"
    "${INCLUDE_DIR}/ObjPolyPlane.h"
    "${INCLUDE_DIR}/OffsetPatchScanner.h"
    "${INCLUDE_DIR}/Orientation.h"
    #"${INCLUDE_DIR}/Panorama.h"
    "${INCLUDE_DIR}/PatchDescriptor.h"
    "${INCLUDE_DIR}/PatchDescriptorExtractor.h"
    #"${INCLUDE_DIR}/PointCloud.h"
    #"${INCLUDE_DIR}/PointCloud_impl.h"
    #"${INCLUDE_DIR}/PointCloudBuilder.h"
    #"${INCLUDE_DIR}/PointCloudOrienter.h"
    #"${INCLUDE_DIR}/PointCloudReader.h"
    #"${INCLUDE_DIR}/PointCloudTextReader.h"
    #"${INCLUDE_DIR}/PointCloudWriter.h"
    #"${INCLUDE_DIR}/PointCloudTextWriter.h"
    #"${INCLUDE_DIR}/PointDataBuilder.h"
    #"${INCLUDE_DIR}/PointDataReader.h"
    #"${INCLUDE_DIR}/PointDataWriter.h"
    #"${INCLUDE_DIR}/PointCloudTools.h"
    "${INCLUDE_DIR}/PlaneSlicingPath.h"
    "${INCLUDE_DIR}/ProHOG.h"
    "${INCLUDE_DIR}/ProHOGExtractor.h"
    "${INCLUDE_DIR}/ProHOGTools.h"
    #"${INCLUDE_DIR}/ProHOGFeatureExtractor.h"
    #"${INCLUDE_DIR}/RangeImager.h"
    #"${INCLUDE_DIR}/RangeMapAdjuster.h"
    "${INCLUDE_DIR}/RangePatchScanner.h"
    "${INCLUDE_DIR}/RectangleManager.h"
    "${INCLUDE_DIR}/RectCluster.h"
    "${INCLUDE_DIR}/RegionSorter.h"
    "${INCLUDE_DIR}/RFeatures.h"
    #"${INCLUDE_DIR}/SLIC.h"
    "${INCLUDE_DIR}/SobelEdges.h"
    "${INCLUDE_DIR}/SobelEdgesExtractor.h"
    "${INCLUDE_DIR}/SobelMaker.h"
    #"${INCLUDE_DIR}/StarKeypoints.h"
    #"${INCLUDE_DIR}/Superpixels.h"
    "${INCLUDE_DIR}/Transformer.h"
    "${INCLUDE_DIR}/VectorDistribution.h"
    #"${INCLUDE_DIR}/VectorFloatKeyHashing.h"
    #"${INCLUDE_DIR}/template/VectorFloatKeyHashing_template.h"
    #"${INCLUDE_DIR}/VertexBoundaries.h"
    #"${INCLUDE_DIR}/View.h"
    #"${INCLUDE_DIR}/template/View_template.h"
    #"${INCLUDE_DIR}/ViewExtract.h"
    #"${INCLUDE_DIR}/ViewFileReader.h"
    #"${INCLUDE_DIR}/ViewFileWriter.h"
    #"${INCLUDE_DIR}/ViewReader.h"
    #"${INCLUDE_DIR}/ViewReceiver.h"
    #"${INCLUDE_DIR}/ViewSampleExtractor.h"
    #"${INCLUDE_DIR}/ViewWriter.h"
    "${INCLUDE_DIR}/WatershedOperator.h"
    )

set( SRC_FILES
    #${SRC_DIR}/AdaptiveDepthMinFilter
    ${SRC_DIR}/AdaptiveDepthPatchScanner
    ${SRC_DIR}/AdaptiveDepthSegmenter
    ${SRC_DIR}/AdaptiveDepthStructureFilter
    ${SRC_DIR}/BatchFeatureExtractor
    ${SRC_DIR}/CameraParams
    ${SRC_DIR}/CannyOperator
    ${SRC_DIR}/CircleDiff
    ${SRC_DIR}/CircleDiffExtractor
    ${SRC_DIR}/ColourDetector
    ${SRC_DIR}/ConnectedComponents
    ${SRC_DIR}/ContentFinder
    #${SRC_DIR}/DataLoader
    #${SRC_DIR}/DataTools
    ${SRC_DIR}/DescriptorJoiner
    ${SRC_DIR}/DescriptorStatistics
    ${SRC_DIR}/DepthDiff
    ${SRC_DIR}/DepthDiffExtractor
    ${SRC_DIR}/DepthFinder
    ${SRC_DIR}/DepthSegmenter
    ${SRC_DIR}/DijkstraShortestPathFinder
    ${SRC_DIR}/DistanceTransform
    ${SRC_DIR}/EDTFeature
    ${SRC_DIR}/EDTFeatureExtractor
    ${SRC_DIR}/Equi2Rect
    ${SRC_DIR}/FastHOG
    ${SRC_DIR}/FastHOGExtractor
    ${SRC_DIR}/Fish2Rect
    #${SRC_DIR}/FastKeypoints
    ${SRC_DIR}/FeatureExceptions
    ${SRC_DIR}/FeatureExtractor
    ${SRC_DIR}/FeatureLibrary
    ${SRC_DIR}/FeatureOperator
    #${SRC_DIR}/FeaturePreProcessor
    ${SRC_DIR}/FeatureUtils
    #${SRC_DIR}/GallLempitskyFeature
    #${SRC_DIR}/GallLempitskyFeatureExtractor
    ${SRC_DIR}/GrabCutsOperator
    ${SRC_DIR}/GradientsBuilder
    ${SRC_DIR}/GradientExtractor
    #${SRC_DIR}/GroundTruthRecords
    ${SRC_DIR}/HaarCascadeDetector
    #${SRC_DIR}/HarrisKeypoints
    #${SRC_DIR}/HeightDepthImager
    ${SRC_DIR}/Histogram
    ${SRC_DIR}/Histogram1D
    ${SRC_DIR}/HoG
    ${SRC_DIR}/HOGExtractor
    ${SRC_DIR}/HoughCirclesOperator
    ${SRC_DIR}/HoughLinesOperator
    #${SRC_DIR}/ImageBuilder
    #${SRC_DIR}/ImageComparator
    ${SRC_DIR}/ImageHistogram
    ${SRC_DIR}/ImageIO
    ${SRC_DIR}/ImageLabeller
    #${SRC_DIR}/ImageModifier   # Requires OpenCV nonfree library
    ${SRC_DIR}/ImageProcess
    ${SRC_DIR}/ImagePyramid
    ${SRC_DIR}/ImageType
    ${SRC_DIR}/IntensityIndexer
    #${SRC_DIR}/JpegDecompressor
    ${SRC_DIR}/KeypointsConverter
    ${SRC_DIR}/KeypointsDetector
    ${SRC_DIR}/LaplacianZC
    ${SRC_DIR}/LinesConverter
    ${SRC_DIR}/LinesFilter
    ${SRC_DIR}/LocalBinaryPattern
    ${SRC_DIR}/LocalBinaryPatternExtractor
    ${SRC_DIR}/LocalPlaneSlicingPath
    #${SRC_DIR}/MserKeypoints
    ${SRC_DIR}/NFoldCalculator
    ${SRC_DIR}/ObjModel
    ${SRC_DIR}/ObjModelAligner
    ${SRC_DIR}/ObjModelBounds
    #${SRC_DIR}/ObjModelCleaner
    ${SRC_DIR}/ObjModelCopier
    ${SRC_DIR}/ObjModelCurvatureMap
    ${SRC_DIR}/ObjModelCurvatureMetrics
    ${SRC_DIR}/ObjModelEdgeFaceAdder
    ${SRC_DIR}/ObjModelFaceUnfoldingVertexSearcher
    ${SRC_DIR}/ObjModelFastMarcher
    ${SRC_DIR}/ObjModelFunctionMapper
    #${SRC_DIR}/ObjModelGeodesicPathFinder
    ${SRC_DIR}/ObjModelHoleFiller
    ${SRC_DIR}/ObjModelInternal
    #${SRC_DIR}/ObjModelIntegrityChecker
    ${SRC_DIR}/ObjModelKDTree
    ${SRC_DIR}/ObjModelKNNCorresponder
    ${SRC_DIR}/ObjModelManifolds
    ${SRC_DIR}/ObjModelManifoldBoundaries
    ${SRC_DIR}/ObjModelMeshTraversalRecorder
    ${SRC_DIR}/ObjModelNormals
    ${SRC_DIR}/ObjModelOrienter
    ${SRC_DIR}/ObjModelPatchBendingEnergy
    ${SRC_DIR}/ObjModelPolygonAngles
    ${SRC_DIR}/ObjModelPolygonAreas
    #${SRC_DIR}/ObjModelPolygonCollapser
    ${SRC_DIR}/ObjModelPolyUnfolder
    ${SRC_DIR}/ObjModelRegionSelector
    ${SRC_DIR}/ObjModelReflector
    ${SRC_DIR}/ObjModelReferenceResampler
    ${SRC_DIR}/ObjModelRemesher
    ${SRC_DIR}/ObjModelSlicer
    ${SRC_DIR}/ObjModelSmoother
    ${SRC_DIR}/ObjModelSurfaceCurveFinder
    ${SRC_DIR}/ObjModelSurfacePatches
    ${SRC_DIR}/ObjModelSurfacePathFinder
    ${SRC_DIR}/ObjModelSurfaceGlobalPlanePathFinder
    ${SRC_DIR}/ObjModelSurfaceLocalPlanePathFinder
    ${SRC_DIR}/ObjModelSurfacePointFinder
    ${SRC_DIR}/ObjModelTetrahedronReplacer
    ${SRC_DIR}/ObjModelTools
    #${SRC_DIR}/ObjModelTopologyFinder
    ${SRC_DIR}/ObjModelTriangleMeshParser
    #${SRC_DIR}/ObjModelVertexAdder
    ${SRC_DIR}/ObjModelVertexCrossingTimeCalculator
    ${SRC_DIR}/ObjModelWeights
    ${SRC_DIR}/ObjPolyInterpolator
    ${SRC_DIR}/ObjPolyPlane
    ${SRC_DIR}/OffsetPatchScanner
    ${SRC_DIR}/Orientation
    #${SRC_DIR}/Panorama
    ${SRC_DIR}/PatchDescriptor
    ${SRC_DIR}/PatchDescriptorExtractor
    #${SRC_DIR}/PointCloud
    #${SRC_DIR}/PointCloud_impl
    #${SRC_DIR}/PointCloudBuilder
    #${SRC_DIR}/PointCloudOrienter
    #${SRC_DIR}/PointCloudReader
    #${SRC_DIR}/PointCloudTextReader
    #${SRC_DIR}/PointCloudWriter
    #${SRC_DIR}/PointCloudTextWriter
    #${SRC_DIR}/PointDataReader
    #${SRC_DIR}/PointDataWriter
    #${SRC_DIR}/PointCloudTools
    ${SRC_DIR}/PlaneSlicingPath
    ${SRC_DIR}/ProHOG
    ${SRC_DIR}/ProHOGExtractor
    ${SRC_DIR}/ProHOGTools
    #${SRC_DIR}/ProHOGFeatureExtractor
    #${SRC_DIR}/RangeImager
    #${SRC_DIR}/RangeMapAdjuster
    ${SRC_DIR}/RangePatchScanner
    ${SRC_DIR}/RectangleManager
    ${SRC_DIR}/RectCluster
    ${SRC_DIR}/RegionSorter
    #${SRC_DIR}/SLIC
    ${SRC_DIR}/SobelEdges
    ${SRC_DIR}/SobelEdgesExtractor
    ${SRC_DIR}/SobelMaker
    #${SRC_DIR}/StarKeypoints
    #${SRC_DIR}/Superpixels
    ${SRC_DIR}/Transformer
    ${SRC_DIR}/VectorDistribution
    #${SRC_DIR}/VectorFloatKeyHashing
    #${SRC_DIR}/VertexBoundaries
    #${SRC_DIR}/View
    #${SRC_DIR}/ViewExtract
    #${SRC_DIR}/ViewFileReader
    #${SRC_DIR}/ViewFileWriter
    #${SRC_DIR}/ViewReader
    #${SRC_DIR}/ViewReceiver
    #${SRC_DIR}/ViewSampleExtractor
    #${SRC_DIR}/ViewWriter
    ${SRC_DIR}/WatershedOperator
    )

add_library( ${PROJECT_NAME} ${SRC_FILES} ${LIBICP_SRC_FILES} ${INCLUDE_FILES})
include( "cmake/LinkLibs.cmake")
